welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:2: error: not found: value negatvie
  if (a<0 && b>0 && negative==false|| a>0 && b<0 && negatvie==false || negative==true && a<0 && b<0){
                                                    ^